force-app/src/objects/c2g__PeriodCloseTemplate__c.object
<CustomObject>
    <description>Creates a template to close periods of the selected accounting companies using the soft close or hard close options.</description>
    <fields>
        <fullName>c2g__Days__c</fullName>
        <description>The number of days before or after the period closing date when you want to run the scheduler. If the days are before the period closing date, then the value is negative.</description>
        <label>Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <description>Field describing the purpose of the object.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludePublicHolidays__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the period close process is scheduled on the dates excluding the public holidays.</description>
        <label>Exclude Public Holidays</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeWeekends__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the period close process is scheduled on the dates excluding the weekends.</description>
        <label>Exclude Weekends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HardOptions__c</fullName>
        <label>Hard Close Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All GLAs</fullName>
                </value>
                <value>
                    <fullName>AR GLAs Group</fullName>
                </value>
                <value>
                    <fullName>AP GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Cash GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Other GLAs Groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the period close template has an active scheduled period close process.</description>
        <label>Activate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SoftOptions__c</fullName>
        <label>Soft Close Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All GLAs</fullName>
                </value>
                <value>
                    <fullName>AR GLAs Group</fullName>
                </value>
                <value>
                    <fullName>AP GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Cash GLAs Group</fullName>
                </value>
                <value>
                    <fullName>Other GLAs Groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__StartTime__c</fullName>
        <description>Stores the start time of the scheduled job.</description>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>Period Close Template</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Scheduled__c</columns>
        <columns>c2g__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Period Close Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Period Close Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>